fixed alignment of categories at dropdown menu of filter, dropdown actions work for phone screen width too

--- a/src/styles/ui/FilterComponent.scss
+++ b/src/styles/ui/FilterComponent.scss
@@ -37,9 +37,12 @@
   margin-top: 0.5rem;
   background-color: white;
 }
-@media (min-width: 768px) {
+@media (min-width: 375px) {
   .filter_dropdown {
+    box-shadow: 0 1px 3px 0 rgba(5, 5, 5, 0.44), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
+    position: fixed;
     display: block;
+    background-color: white;
   }
 }
 .filter_dropdown_actions {
